seaclub-backend-microservices-development/infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.seaclub-prod.online
      http:
        paths:
          - path: /api-docs/?(.*)
            pathType: Prefix
            backend:
              service:
                name: swagger-ui-srv
                port:
                  number: 5010
          - path: /api/v1/users/auth/linkedin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 5000
          - path: /api/v1/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 5000
          - path: /api/v1/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 5001
          - path: /api/v1/analytics/?(.*)
            pathType: Prefix
            backend:
              service:
                name: analytic-srv
                port:
                  number: 5002
          - path: /api/v1/projects/?(.*)
            pathType: Prefix
            backend:
              service:
                name: project-srv
                port:
                  number: 5003
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "86d700a2-d145-4bfa-b2e3-2e8e29841c63"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.seaclub-prod.online"
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
